[package]
name = "metrics-prometheus-client"
version = "0.0.1"
edition = "2021"
description = "Creating compatibility between `metrics` and `prometheus_client`."
authors = ["Pascal Berrang <rust@paberr.net>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paberr/metrics-prometheus-client"
repository = "https://github.com/paberr/metrics-prometheus-client"
readme = "README.md"
keywords = ["metrics", "prometheus"]

[dependencies]
metrics = "0.23"
prometheus-client = "0.22.2"
